Adding implementation for price details endpoint. Moving it under webPages in swagger.yaml
